Openlayers3 확장기능 구현중

--- a/main.html
+++ b/main.html
@@ -18,11 +18,10 @@
     <div id="progress"><img src="./images/103.gif"></div>
     <div id="listView">
     	<div id="layerBox">
-            <div class="card base layer-on" id="base">Base</div>
+            <div class="card base" id="base">Base</div>
             <div class="card base" id="midnight">Midnight</div>
-            <div class="card base" id="gray">Gray</div>
-            <div class="card" id="sidoLayer9">경기도</div>
-            <div class="card" id="bemdLayer">법정읍면동</div>
+            <div class="card base layer-on" id="gray">Gray</div>
+            <div class="card" id="bemdLayer">법정읍면동</div><br />
     	</div>
     </div>
   </body>
