--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
     <script src="./libs/jquery/2.2.3/jquery-2.2.3.min.js"></script>
     <script src="./libs/openlayers/3.20.0/ol-debug.js" type="text/javascript"></script>
     <link rel="stylesheet" href="base.css" type="text/css">
