--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0">
+    <script src="./libs/turf.js/turf.min.js"></script>
     <script src="./libs/jquery/2.2.3/jquery-2.2.3.min.js"></script>
     <script src="./libs/openlayers/3.20.0/ol-debug.js" type="text/javascript"></script>
     <link rel="stylesheet" href="base.css" type="text/css">
