--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=2.5"> -->
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <script src="./libs/turf.js/turf.min.js"></script>
     <script src="./libs/jquery/2.2.3/jquery-2.2.3.min.js"></script>
     <script src="./libs/openlayers/3.20.0/ol-debug.js" type="text/javascript"></script>
