Openlayers3 확장기능 구현중

--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -24,6 +24,7 @@
             <div class="card base" id="midnight">Midnight</div>
             <div class="card base layer-on" id="gray">Gray</div>
             <div class="card" id="bemdLayer">법정읍면동</div><br />
+            <div class="card" id="hemdLayer">행정읍면동</div><br />
     	</div>
     </div>
   </body>
