--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -2,21 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1">
     <script src="./libs/turf.js/turf.min.js"></script>
     <script src="./libs/jquery/2.2.3/jquery-2.2.3.min.js"></script>
     <script src="./libs/openlayers/3.20.0/ol-debug.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="ol.css" type="text/css">
     <link rel="stylesheet" href="base.css" type="text/css">
     <title>OpenLayers map preview</title>
   </head>
   <body>
     <div id="mapContainer" style="position: relative;">
     	<div id="map"></div>
+    	<div id="wrapper">
+	        <div id="scale"></div>
+	        <div id="location"></div>
+	    </div>
     </div>  
-    <div id="wrapper">
-        <div id="scale"></div>
-        <div id="location"></div>
-    </div>
     <div id="progress"><img src="./images/103.gif"></div>
     <div id="listView">
     	<div id="layerBox">
