--- a/WebContent/main.html
+++ b/WebContent/main.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <script src="./libs/turf.js/turf.min.js"></script>
     <script src="./libs/jquery/2.2.3/jquery-2.2.3.min.js"></script>
-    <script src="./libs/openlayers/3.20.0/ol-debug.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="ol.css" type="text/css">
+    <script src="./libs/openlayers/5.3.0/ol.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./libs/openlayers/5.3.0/ol.css" type="text/css">
     <link rel="stylesheet" href="base.css" type="text/css">
     <title>OpenLayers map preview</title>
   </head>
